# Computer-Graphics-Projects

./: .gitmodules  README.md
Final-Project/: CMakeLists.txt  README.md  main.cpp
Final-Project/headers/: graph.h  graph_edge.h  graph_node.h  model.h  model_line.h  model_vertex.h  program.h
Final-Project/include/: crestlines.h  flowline.h  graph.h  graph_edge.h  graph_node.h  model.h  model_line.h  model_vertex.h  program.h  utils.h  variables.h
Final-Project/res/models/: readme.txt
Final-Project/res/models/bathtub/: source.txt
Final-Project/res/models/mouse/: source.txt
Final-Project/res/models/mug/: mug.ply2  ravines.txt  ridges.txt
Final-Project/res/models/rowboat/: source.txt
Final-Project/res/models/wineglass/: source.txt
Final-Project/res/shaders/: fragmentShader.glsl  fragmentShaderModel.glsl  vertexShader.glsl  vertexShaderModel.glsl
Final-Project/src/: graph.cpp  model.cpp  program.cpp
Project-2/Source-Files/: declarations.h  rotate-cube-new.cpp
Project-4/: README.md
Project-4/Shaders/: color_fShader.glsl  color_vShader.glsl  skybox_fShader.glsl  skybox_vShader.glsl
Project-4/Source-Files/: main.cpp  main.out  main_modern.cpp
Project-4/headers/: perlin_noise.h  shader.h  variables.h
